syntax = "proto3";

package systemevent;

option java_multiple_files = true;
option java_package = "org.app.systemevent.proto";
option java_outer_classname = "SystemEventProto";

service SystemEventService {
  rpc LogEvent(LogEventRequest) returns (LogEventResponse) {}
}

message LogEventRequest {
  string service_name = 1;
  string endpoint = 2;
  string http_method = 3;
  string resource_id = 4;
  string request_body = 5;
  string response_body = 6;
  int32 status_code = 7;
  string user_id = 8;
  int64 timestamp = 9;
  int64 duration_ms = 10;
}

message LogEventResponse {
  bool success = 1;
  string message = 2;
}